重写了Project的Board样式 增加浮动效果

--- a/Application/Home/View/Activity/load.html
+++ b/Application/Home/View/Activity/load.html
@@ -1,6 +1,6 @@
 <volist name="acList" id="vo">
   <li>
-	<div class="am-panel am-panel-default">
+	<div class="am-panel am-panel-default board">
 	  <div class="am-panel-bd am-panel-padding4">
 	    <center>
 	    	<a href="{:U('/Home/Activity/detail').'?id='.$vo['id']}">
