--- a/Application/Home/View/Project/load.html
+++ b/Application/Home/View/Project/load.html
@@ -1,6 +1,23 @@
 <volist name="prolist" id="vo">
   <li>
-	<div class="am-panel am-panel-default">
+
+
+	<div class="am-panel am-panel-default board">
+	  <div class="am-panel-bd am-panel-padding4">
+	    <center>
+	    	<a href="{:U('/Home/Project/detail').'?id='.$vo['id']}">
+	    		<span class="am-badge am-badge-secondary activity-online">{$vo['ProcessName']}</span>
+	    		<img class="am-radius activity-img" src="/Public/Uploads/{$vo['img']}" alt=""/>
+	    	</a>
+	    </center>
+	    <div class="am-serif project-name">{$vo['name']}</div>
+	    <hr class="project-hr" />
+	    <div class="am-icon-user project-user"> {$vo['username']}</div>
+	  </div>
+	</div>
+
+
+<!-- 	<div class="am-panel am-panel-default">
 	  <div class="am-panel-hd">
 	    <h3 class="am-panel-title">{$vo['name']}</h3>
 	  </div>
@@ -13,7 +30,7 @@
         </div>
 	  </div>
 	  <div class="am-panel-footer"><span class="am-icon-user"> {$vo['username']}</span></div>
-	</div>
+	</div> -->
   </li>
  </volist>
 
