--- a/Public/css/public.css
+++ b/Public/css/public.css
@@ -73,3 +73,26 @@ footer {
 .project-type{
 	margin: 4px auto;
 }
+.project-name{
+	font-size: 14px;
+	margin-left: 2px;
+	margin-top: 6px;
+}
+.project-hr{
+	margin-bottom: 2px;
+	margin-top: 6px;
+}
+.project-user{
+	margin-bottom: 4px;
+	font-size: 14px;
+	margin-left: 2px;
+}
+.board:hover{
+	transition:border linear .1s,box-shadow linear .3s;
+	-moz-transition:border linear .1s,-moz-box-shadow linear .3s;
+	-webkit-transition:border linear .1s,-webkit-box-shadow linear .3s;
+	outline:none;border-color:rgba(93,149,242,.75);
+	box-shadow:0 0 8px rgba(93,149,242,.105);
+	-moz-box-shadow:0 0 8px rgba(93,149,242,.5);
+	-webkit-box-shadow:0 0 8px rgba(93,149,242,3);
+}
